Fixed misaligned text

--- a/packages/web/src/pages/Chat/Chat.module.scss
+++ b/packages/web/src/pages/Chat/Chat.module.scss
@@ -211,6 +211,10 @@ $maxInputHeight: calc(
   align-items: center;
   margin-bottom: 0;
   flex-grow: 1;
+
+  .desc {
+    text-align: center;
+  }
 }
 
 .scrollingAnchor {
